[project]
name = "rykit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ryan Kosta", email = "rkosta@ucsd.edu" }
]
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = []

[tool.uv]
packages = ["rykit"]
src = "src"


[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
